force-app/main/default/objects/ReportingData__c/ReportingData__c.object-meta.xml
<CustomObject>
    <label>Reporting Data</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reporting Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>