force-app/main/default/objects/ReportingData__c/fields/BTO_Category__c.field-meta.xml
<CustomField>
    <fullName>BTO_Category__c</fullName>
    <label>BTO Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>