force-app/main/default/objects/ReportingData__c/fields/CRM_Category__c.field-meta.xml
<CustomField>
    <fullName>CRM_Category__c</fullName>
    <description>Reporting Category</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Adoption</fullName>
            </value>
            <value>
                <fullName>New Users</fullName>
            </value>
            <value>
                <fullName>Service Appointment</fullName>
            </value>
            <value>
                <fullName>DIA User Adoption</fullName>
            </value>
            <value>
                <fullName>STO</fullName>
            </value>
            <value>
                <fullName>Video View</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>BTO Transfer</fullName>
            </value>
            <value>
                <fullName>BTO</fullName>
            </value>
            <value>
                <fullName>STO Transfer</fullName>
            </value>
            <value>
                <fullName>TAG External Notification</fullName>
            </value>
            <value>
                <fullName>Chat Threat</fullName>
            </value>
            <value>
                <fullName>Kommunal hurtigtekst</fullName>
            </value>
            <value>
                <fullName>TAG Admin</fullName>
            </value>
            <value>
                <fullName>Besvart med Bob</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>