force-app/main/default/objects/ReportingData__c/fields/CRM_Category_Index__c.field-meta.xml
<CustomField>
    <fullName>CRM_Category_Index__c</fullName>
    <externalId>true</externalId>
    <label>Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>