force-app/main/default/objects/ReportingData__c/fields/CRM_Date__c.field-meta.xml
<CustomField>
    <fullName>CRM_Date__c</fullName>
    <description>Date when a record was created or updated</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>