force-app/main/default/objects/ReportingData__c/fields/CRM_IsMyNavUnit__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsMyNavUnit__c</fullName>
    <formula>CRM_NavUnit__c = $User.City</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My NAV Unit</label>
    <type>Checkbox</type>
</CustomField>