force-app/main/default/objects/ReportingData__c/fields/CRM_IsMyRegion__c.field-meta.xml
<CustomField>
    <fullName>CRM_IsMyRegion__c</fullName>
    <formula>CRM_Region__c = $User.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My Region</label>
    <type>Checkbox</type>
</CustomField>