force-app/main/default/objects/ReportingData__c/fields/CRM_NavUnit__c.field-meta.xml
<CustomField>
    <fullName>CRM_NavUnit__c</fullName>
    <label>Nav Unit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>