force-app/main/default/objects/ReportingData__c/fields/CRM_NavUnitNumber__c.field-meta.xml
<CustomField>
    <fullName>CRM_NavUnitNumber__c</fullName>
    <externalId>true</externalId>
    <label>Nav Unit Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>