force-app/main/default/objects/ReportingData__c/fields/CRM_Region__c.field-meta.xml
<CustomField>
    <fullName>CRM_Region__c</fullName>
    <description>Users&#39;s region</description>
    <label>Region</label>
    <length>30</length>
    <type>Text</type>
</CustomField>