force-app/main/default/objects/ReportingData__c/fields/CRM_Value__c.field-meta.xml
<CustomField>
    <fullName>CRM_Value__c</fullName>
    <description>Reporting value in integer</description>
    <label>Value</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>