force-app/main/default/objects/ReportingData__c/fields/CRM_Week__c.field-meta.xml
<CustomField>
    <fullName>CRM_Week__c</fullName>
    <description>Week number</description>
    <label>Value</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>