force-app/main/default/objects/ReportingData__c/fields/HOT_ActualEndTime__c.field-meta.xml
<CustomField>
    <fullName>HOT_ActualEndTime__c</fullName>
    <label>SA: Actual End</label>
    <type>DateTime</type>
</CustomField>