force-app/main/default/objects/ReportingData__c/fields/HOT_ActualStartTime__c.field-meta.xml
<CustomField>
    <fullName>HOT_ActualStartTime__c</fullName>
    <label>Actual Start</label>
    <type>DateTime</type>
</CustomField>