force-app/main/default/objects/ReportingData__c/fields/HOT_AssignmentType__c.field-meta.xml
<CustomField>
    <fullName>HOT_AssignmentType__c</fullName>
    <label>Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HOT_AssignmentType</valueSetName>
    </valueSet>
</CustomField>