force-app/main/default/objects/ReportingData__c/fields/HOT_CancelComment__c.field-meta.xml
<CustomField>
    <fullName>HOT_CancelComment__c</fullName>
    <label>Cancel Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>