force-app/main/default/objects/ReportingData__c/fields/HOT_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>HOT_CreatedDate__c</fullName>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>