force-app/main/default/objects/ReportingData__c/fields/HOT_DeadlineDate__c.field-meta.xml
<CustomField>
    <fullName>HOT_DeadlineDate__c</fullName>
    <label>Deadline Date</label>
    <type>Date</type>
</CustomField>