force-app/main/default/objects/ReportingData__c/fields/HOT_DueDate__c.field-meta.xml
<CustomField>
    <fullName>HOT_DueDate__c</fullName>
    <label>SA: Due date</label>
    <type>DateTime</type>
</CustomField>