force-app/main/default/objects/ReportingData__c/fields/HOT_DurationType__c.field-meta.xml
<CustomField>
    <fullName>HOT_DurationType__c</fullName>
    <label>Duration Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>