force-app/main/default/objects/ReportingData__c/fields/HOT_EarliestStartTime__c.field-meta.xml
<CustomField>
    <fullName>HOT_EarliestStartTime__c</fullName>
    <label>Earliest start time permitted</label>
    <type>DateTime</type>
</CustomField>