force-app/main/default/objects/ReportingData__c/fields/HOT_FreelanceSubject__c.field-meta.xml
<CustomField>
    <fullName>HOT_FreelanceSubject__c</fullName>
    <label>Freelance Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>