force-app/main/default/objects/ReportingData__c/fields/HOT_IsAcute__c.field-meta.xml
<CustomField>
    <fullName>HOT_IsAcute__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request: Acute</label>
    <type>Checkbox</type>
</CustomField>