force-app/main/default/objects/ReportingData__c/fields/HOT_IsEmployedInterpreter__c.field-meta.xml
<CustomField>
    <fullName>HOT_IsEmployedInterpreter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employed Interpreter</label>
    <type>Checkbox</type>
</CustomField>