force-app/main/default/objects/ReportingData__c/fields/HOT_IsFreelanceInterpreter__c.field-meta.xml
<CustomField>
    <fullName>HOT_IsFreelanceInterpreter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SA: Freelance Interpreter</label>
    <type>Checkbox</type>
</CustomField>