force-app/main/default/objects/ReportingData__c/fields/HOT_IsHapticCommunication__c.field-meta.xml
<CustomField>
    <fullName>HOT_IsHapticCommunication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HapticCommunication</label>
    <type>Checkbox</type>
</CustomField>