force-app/main/default/objects/ReportingData__c/fields/HOT_IsScreenInterpreter__c.field-meta.xml
<CustomField>
    <fullName>HOT_IsScreenInterpreter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Screen Interpreter</label>
    <type>Checkbox</type>
</CustomField>