force-app/main/default/objects/ReportingData__c/fields/HOT_IsSerieoppdrag__c.field-meta.xml
<CustomField>
    <fullName>HOT_IsSerieoppdrag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Serieoppdrag</label>
    <type>Checkbox</type>
</CustomField>