force-app/main/default/objects/ReportingData__c/fields/HOT_Owner__c.field-meta.xml
<CustomField>
    <fullName>HOT_Owner__c</fullName>
    <label>Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>