force-app/main/default/objects/ReportingData__c/fields/HOT_ReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>HOT_ReleaseDate__c</fullName>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>