force-app/main/default/objects/ReportingData__c/fields/HOT_Request__c.field-meta.xml
<CustomField>
    <fullName>HOT_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request</label>
    <referenceTo>HOT_Request__c</referenceTo>
    <relationshipLabel>Reporting Data</relationshipLabel>
    <relationshipName>Reporting_Data</relationshipName>
    <type>Lookup</type>
</CustomField>