force-app/main/default/objects/ReportingData__c/fields/HOT_RequestCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>HOT_RequestCreatedDate__c</fullName>
    <label>Request Created Date</label>
    <type>DateTime</type>
</CustomField>