force-app/main/default/objects/ReportingData__c/fields/HOT_RequestName__c.field-meta.xml
<CustomField>
    <fullName>HOT_RequestName__c</fullName>
    <label>Request: Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>