force-app/main/default/objects/ReportingData__c/fields/HOT_RequestSubject__c.field-meta.xml
<CustomField>
    <fullName>HOT_RequestSubject__c</fullName>
    <label>Request: Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>