force-app/main/default/objects/ReportingData__c/fields/HOT_SchedEndTime__c.field-meta.xml
<CustomField>
    <fullName>HOT_SchedEndTime__c</fullName>
    <label>Scheduled End</label>
    <type>DateTime</type>
</CustomField>