force-app/main/default/objects/ReportingData__c/fields/HOT_SchedStartTime__c.field-meta.xml
<CustomField>
    <fullName>HOT_SchedStartTime__c</fullName>
    <label>SA: Scheduled Start</label>
    <type>DateTime</type>
</CustomField>