force-app/main/default/objects/ReportingData__c/fields/HOT_ServiceAppointment__c.field-meta.xml
<CustomField>
    <fullName>HOT_ServiceAppointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Reporting Data</relationshipLabel>
    <relationshipName>Reporting_Data</relationshipName>
    <type>Lookup</type>
</CustomField>