force-app/main/default/objects/ReportingData__c/fields/HOT_ServiceAppointmentActualDuration__c.field-meta.xml
<CustomField>
    <fullName>HOT_ServiceAppointmentActualDuration__c</fullName>
    <label>Actual Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>