force-app/main/default/objects/ReportingData__c/fields/HOT_ServiceAppointmentAssignmentType__c.field-meta.xml
<CustomField>
    <fullName>HOT_ServiceAppointmentAssignmentType__c</fullName>
    <label>SA: Assignment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>