force-app/main/default/objects/ReportingData__c/fields/HOT_ServiceAppointmentCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>HOT_ServiceAppointmentCreatedDate__c</fullName>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>