force-app/main/default/objects/ReportingData__c/fields/HOT_ServiceAppointmentDuration__c.field-meta.xml
<CustomField>
    <fullName>HOT_ServiceAppointmentDuration__c</fullName>
    <label>SA: Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>