force-app/main/default/objects/ReportingData__c/fields/HOT_ServiceAppointmentNumber__c.field-meta.xml
<CustomField>
    <fullName>HOT_ServiceAppointmentNumber__c</fullName>
    <label>Service Appointment Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>