force-app/main/default/objects/ReportingData__c/fields/HOT_ServiceAppointmentOwner__c.field-meta.xml
<CustomField>
    <fullName>HOT_ServiceAppointmentOwner__c</fullName>
    <label>SA: Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>