force-app/main/default/objects/ReportingData__c/fields/HOT_ServiceAppointmentServiceTerritory__c.field-meta.xml
<CustomField>
    <fullName>HOT_ServiceAppointmentServiceTerritory__c</fullName>
    <label>SA: ServiceTerritory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>