force-app/main/default/objects/ReportingData__c/fields/HOT_ServiceTerritory__c.field-meta.xml
<CustomField>
    <fullName>HOT_ServiceTerritory__c</fullName>
    <label>ServiceTerritory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>