force-app/main/default/objects/ReportingData__c/fields/HOT_Status__c.field-meta.xml
<CustomField>
    <fullName>HOT_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>