force-app/main/default/objects/ReportingData__c/fields/HOT_Subject__c.field-meta.xml
<CustomField>
    <fullName>HOT_Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>