force-app/main/default/objects/ReportingData__c/fields/HOT_WorkType__c.field-meta.xml
<CustomField>
    <fullName>HOT_WorkType__c</fullName>
    <label>SA: Work Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>