force-app/main/default/objects/ReportingData__c/fields/NavUnit__c.field-meta.xml
<CustomField>
    <fullName>NavUnit__c</fullName>
    <label>Nav Unit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>