force-app/main/default/objects/ReportingData__c/fields/NKS_Has_Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>NKS_Has_Messaging_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Messaging Session</label>
    <type>Checkbox</type>
</CustomField>