force-app/main/default/objects/ReportingData__c/fields/NKS_Messaging_Session__c.field-meta.xml
<CustomField>
    <fullName>NKS_Messaging_Session__c</fullName>
    <description>JSON containing Messaging Session record</description>
    <label>Messaging Session</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>