force-app/main/default/objects/ReportingData__c/fields/NKS_Messaging_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>NKS_Messaging_Session_Id__c</fullName>
    <label>NKS Messaging Session Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>