force-app/main/default/objects/ReportingData__c/fields/NKS_Related_Record__c.field-meta.xml
<CustomField>
    <fullName>NKS_Related_Record__c</fullName>
    <externalId>true</externalId>
    <label>Related Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>