force-app/main/default/objects/ReportingData__c/fields/NKS_Video_Id__c.field-meta.xml
<CustomField>
    <fullName>NKS_Video_Id__c</fullName>
    <description>Reference to the ContentDocument record that was view in the asset library</description>
    <externalId>true</externalId>
    <label>Video Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>