force-app/main/default/objects/ReportingData__c/fields/STO_Category__c.field-meta.xml
<CustomField>
    <fullName>STO_Category__c</fullName>
    <label>STO Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>