force-app/main/default/objects/ReportingData__c/fields/STO_MilestoneId__c.field-meta.xml
<CustomField>
    <fullName>STO_MilestoneId__c</fullName>
    <externalId>true</externalId>
    <label>Milestone ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>