force-app/main/default/objects/ReportingData__c/fields/TAG_Category__c.field-meta.xml
<CustomField>
    <fullName>TAG_Category__c</fullName>
    <label>TAG Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>