force-app/main/default/objects/ReportingData__c/fields/TAG_Key__c.field-meta.xml
<CustomField>
    <fullName>TAG_Key__c</fullName>
    <label>TAG Key</label>
    <length>155</length>
    <type>Text</type>
</CustomField>