force-app/main/default/objects/ReportingData__c/fields/TAG_Measurement__c.field-meta.xml
<CustomField>
    <fullName>TAG_Measurement__c</fullName>
    <label>TAG Measurement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>